# book-batch-rust

./: .aiignore  .gitignore  Cargo.toml  diesel.toml
migrations/2025-04-23-032623_book-batck-rust/: up.sql
migrations/2025-05-21-012417_books/: up.sql
migrations/2026-04-12-164654_books/: up.sql
src/: batch.rs  book.rs  config.rs  configs.rs  external.rs  item.rs  lib.rs  main.rs  procedure.rs  prompt.rs  provider.rs
src/batch/: book.rs  error.rs  series.rs
src/batch/book/: aladin.rs  kyobo.rs  naver.rs  nlgo.rs
src/batch/series/: utils.rs
src/book/: entity.rs  mod.rs  model.rs  repository.rs  schema.rs
src/book/repository/: mod.rs
src/book/repository/diesel/: book.rs  book_origin_filter.rs  entity.rs  mod.rs  publisher.rs  schema.rs
src/config/: api.rs  database.rs  log.rs  mod.rs
src/config/api/: mod.rs
src/config/chrome/: mod.rs
src/config/db/: mod.rs
src/config/logger/: mod.rs
src/configs/: logging.rs
src/item/: raw_impl.rs  raw_utils.rs  repo.rs
src/item/repo/: diesel.rs  mongo.rs
src/item/repo/diesel/: schema.rs
src/procedure/: aladin.rs  filter.rs  mod.rs  nlgo.rs  reader.rs  writer.rs
src/procedure/filter/: mod.rs
src/procedure/reader/: aladin.rs  kyobo.rs  mod.rs  naver.rs  nlgo.rs
src/procedure/writer/: mod.rs
src/prompt/: bridge.rs
src/provider/: aladin.rs  api.rs  error.rs  html.rs  mod.rs  nlgo.rs
src/provider/api/: aladin.rs  mod.rs  naver.rs  nlgo.rs
src/provider/html/: kyobo.rs  mod.rs
src/provider/html/kyobo/: chrome.rs  mod.rs  utils.rs
src/provider/html/kyobo/chrome/: mod.rs
