[package]
name = "book-batch-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
config = "0.15.11"
diesel = { version = "2.2.9", features = ["postgres", "r2d2", "chrono"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-xml-rs = "0.7.1"
serde_with = "3.12.0"
r2d2 = "0.8.10"
dotenvy = "0.15.7"
regex = "1.11.1"
time = { version = "0.3.41", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "local-time"] }
tracing-appender = "0.2.3"
thirtyfour_sync = "0.27.1"
scraper = "0.23.1"
mongodb = { version = "3.2.3", features = ["sync"] }
